--- a/src/scss/06_components/forms/_collapsible.scss
+++ b/src/scss/06_components/forms/_collapsible.scss
@@ -5,7 +5,7 @@ $collapsible-height: 56px;
 }
 
 .collapsible__element {
-  border: 2px solid #808080;
+  border: 2px solid $color-black-50;
 }
 
 .collapsible-container {
@@ -22,12 +22,12 @@ $collapsible-height: 56px;
 }
 
 .collapsible__control {
+  @include font('body');
   align-items: center;
   background: $color-white;
   display: flex;
-  font-size: 18px;
-  height: 56px;
-  padding: 12px 16px;
+  // 12px is for keeping padding in line with HDS select component
+  padding: 12px $spacing;
   text-align: start;
   width: 100%;
 
