--- a/src/scss/06_components/forms/_react-forms.scss
+++ b/src/scss/06_components/forms/_react-forms.scss
@@ -23,7 +23,7 @@
   margin-bottom: $spacing;
 }
 
-// Override HDBTs li+li style {
+// Override HDBTs li+li
 .hdbt-search__filter li {
   margin-top: 0;
 }
