LOM-266: LOM-266 Moved the display name variable to the translation

--- a/templates/module/helfi_platform_config/profile-block.html.twig
+++ b/templates/module/helfi_platform_config/profile-block.html.twig
@@ -15,7 +15,7 @@
     modifier_suffix: 'profile',
 
     open_label: display_name,
-    open_screenreader: 'You are logged in as '|t ~ display_name ~ '. ' ~ 'Open profile information menu'|t({}, {'context': 'Profile information-menu open button text for screen readers'}),
+    open_screenreader: 'You are logged in as @display_name. Open profile information menu.'|t({ '@display_name': display_name }, {'context': 'Profile information-menu open button text for screen readers'}),
 
     close_label: 'Close'|t(),
     close_screenreader: 'Close profile information menu'|t({}, {'context': 'Profile information-menu close button text for screen readers'}),
