--- a/templates/misc/icon.twig
+++ b/templates/misc/icon.twig
@@ -2,6 +2,6 @@
 
 <span class="hel-icon hel-icon--{{ icon }} {{ class }}" role="img" {% if label %} aria-labelledby="{{ icon_labelled_by }}" {% else %} aria-hidden="true" {% endif %}>
   {% if label %}
-    <span class="visually-hidden" id="{{ icon_labelled_by }}">{{ label }}</span>
+    <span class="is-hidden" id="{{ icon_labelled_by }}">{{ label }}</span>
   {% endif %}
 </span>
