UHF-6836: Start moving styles to general react-search file

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -16,6 +16,7 @@
 @import 'phasing';
 @import 'popular-service-item';
 @import 'popular-services';
+@import 'react-search';
 @import 'remote-video';
 @import 'service-list';
 @import 'sidebar-text';
