--- a/templates/paragraphs/paragraph--school-search.html.twig
+++ b/templates/paragraphs/paragraph--school-search.html.twig
@@ -2,7 +2,8 @@
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
-        'component--event-list'
+        'component--react-search',
+        'component--react-search--schools'
       ],
       component_title_level: 'h2',
       component_title: content.field_event_list_title,
