--- a/templates/paragraphs/paragraph--event-list.html.twig
+++ b/templates/paragraphs/paragraph--event-list.html.twig
@@ -2,7 +2,7 @@
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
-        'component--event-list'
+        'component--react-search component--event-list'
       ],
       component_title_level: 'h2',
       component_title: content.field_event_list_title,
