UHF-7298: Fixed service list paragraph layout when infinity scroll pager is removed

--- a/templates/views/views-view--service-list.html.twig
+++ b/templates/views/views-view--service-list.html.twig
@@ -61,7 +61,9 @@
     </span>
   {% endif %}
 
-  {{ rows }}
+  <div class="service-list__results">
+    {{ rows }}
+  </div>
 
   {{ empty }}
   {{ pager }}
