--- a/src/scss/06_components/paragraphs/_service-list.scss
+++ b/src/scss/06_components/paragraphs/_service-list.scss
@@ -42,37 +42,31 @@
       }
     }
   }
+}
 
-  .service-list__count-container {
-    @include font('lead');
-    display: block;
-    width: 100%;
+.service-list__count-container {
+  @include font('lead');
+  display: block;
+  width: 100%;
 
-    .service-list__count {
-      font-weight: $font-weight-bold;
-    }
+  .service-list__count {
+    font-weight: $font-weight-bold;
+  }
+}
+
+.service-list__results {
+  margin-top: $spacing-and-half;
+
+  @include breakpoint($breakpoint-l) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-inline: calc(-#{$spacing-and-half} / 2);
+    margin-top: $spacing-triple;
   }
 
-  .views-infinite-scroll-content-wrapper {
-    margin-top: $spacing-and-half;
-
+  .views-row {
     @include breakpoint($breakpoint-l) {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: calc(-#{$spacing-and-half} / 2);
-      margin-right: calc(-#{$spacing-and-half} / 2);
-      margin-top: $spacing-triple;
-    }
-
-    .views-row {
-      @include breakpoint($breakpoint-l) {
-        margin-top: $spacing-and-half;
-        width: 25%;
-      }
-
-      &:nth-child(-n+4) {
-        margin-top: 0;
-      }
+      width: 25%;
     }
   }
 }
