--- a/templates/module/helfi_tpr/tpr-service-lower-content.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-lower-content.html.twig
@@ -10,7 +10,18 @@
 {% set service_units_view = drupal_view_result('service_units', 'service_units')|length %}
 
 {% if service_units_view > 0 %}
-  <div class="service__units">
-    {{ drupal_view('service_units', 'service_units') }}
-  </div>
+  {% embed "@hdbt/misc/component.twig" with
+    {
+      component_classes: [
+      'component--service-units',
+      'component--hardcoded'
+    ]
+    }
+  %}
+    {% block component_content %}
+      <div class="service__units">
+        {{ drupal_view('service_units', 'service_units') }}
+      </div>
+    {% endblock component_content %}
+  {% endembed %}
 {% endif %}
