--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -1,9 +1,3 @@
-// TODO: This whole file should be rewritten
-// * Handorgel library CSS codes should be moved here
-// * Overriding default handorgel styles should be cleaned up, so that they are not defined to begin with.
-// * Nesting should be avoided as much as possible
-
-
 .accordion__wrapper {
   border-bottom: 1px solid $color-black-20;
 }
@@ -85,6 +79,21 @@
       width: 32px;
     }
   }
+
+  &:focus {
+    outline: 3px solid $color-black;
+    outline-offset: -3px;
+    position: relative;
+
+    &::before {
+      box-shadow: 0 0 0 3px $color-black-90;
+      pointer-events: none;
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .accordion-item__button--close {
@@ -97,22 +106,13 @@
   right: -1px; // To adjust the positioning so that the element lines up nicely.
 
   &:focus {
-    box-shadow: 0 0 0 3px $color-black-90;
-    outline: none;
+    outline: 3px solid $color-black;
+    outline-offset: -3px;
     pointer-events: none;
   }
 
   &:hover {
     cursor: pointer;
-  }
-}
-
-.accordion-item__button--toggle:focus {
-  position: relative;
-
-  &::before {
-    box-shadow: 0 0 0 3px $color-black-90;
-    pointer-events: none;
   }
 }
 
@@ -126,10 +126,6 @@
 
 .accordion-item__content {
   border: none;
-}
-
-.accordion-item__content--hidden {
-  display: none;
 }
 
 .accordion-item__content__inner {
