--- a/templates/component/accordion.twig
+++ b/templates/component/accordion.twig
@@ -9,10 +9,11 @@
 {{ attach_library('hdbt/accordion') }}
 
 {% set controlled_content_id = "accordion-item-content--" ~ random() %}
+{% set labelledby_id = "accordion-item-header--" ~ random() %}
 
 <div class="accordion__wrapper helfi-accordion-item" data-accordion-id="{{heading[0]['#context']['value']|clean_class}}">
-  <{{ heading_level|default('h2') }} class="accordion-item__header helfi-accordion__header" data-accordion-id="{{heading[0]['#context']['value']|clean_class}}">
-    <button class="accordion-item__button accordion-item__button--toggle helfi-accordion__header__button" aria-expanded="true" aria-controls="{{ controlled_content_id }}">
+  <{{ heading_level|default('h2') }} class="accordion-item__header helfi-accordion__header" id={{ labelledby_id }} data-accordion-id="{{heading[0]['#context']['value']|clean_class}}">
+    <button class="accordion-item__button accordion-item__button--toggle helfi-accordion__header__button" aria-expanded="true" aria-controls="{{ controlled_content_id }}" aria-labelledby="{{ labelledby_id }}">
       {% if heading_icon %}
         <div class="accordion-item__icon">
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: heading_icon} %}
@@ -26,7 +27,7 @@
 
       {{ content|default('Missing content'|t) }}
 
-      <button class="accordion-item__button accordion-item__button--close" aria-expanded="true" aria-controls="{{ controlled_content_id }}">
+      <button class="accordion-item__button accordion-item__button--close" aria-expanded="true" aria-controls="{{ controlled_content_id }}" aria-labelledby="{{ labelledby_id }}">
         {% if heading_icon %}
           <div class="accordion-item__icon">
             {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-up'} %}
