UHF-7794: Moved span that labels accordion header outside the h2 element to fix issue with toc, fixed icon styling on close button and moved it to pseudo element

--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -109,9 +109,13 @@
   &:hover {
     cursor: pointer;
   }
+
+  &::after {
+    @include pseudo-icon('angle-up', $spacing-and-half, currentColor, inline-block);
+  }
 }
 
-.accordion-item__button[aria-expanded='true'] {
+.accordion-item__button--toggle[aria-expanded='true'] {
   background-color: transparent;
 
   &::after {
