UHF-6839: Move form style to general

--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -26,6 +26,11 @@
   }
 }
 
+.react-search__form-container {
+  border-bottom: 1px solid $color-black-20;
+  margin-bottom: $spacing-double;
+}
+
 .react-search__list-container {
   margin-bottom: $spacing-double;
 }
