UHF-7029: UHF-7486: Change child style

--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -80,7 +80,7 @@
   }
 
   .helfi-calculator__dynamic-slot {
-    border: 1px solid $color-black-90;
+    background-color: $color-silver-light;
     padding: $spacing-double $spacing-and-half;
 
     &:not(:first-child) {
