UHF-7029: UHF-7486: Fix the remove child button styles

--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -117,7 +117,12 @@
     margin-bottom: - $spacing-and-half;
     margin-right: - $spacing;
 
+    &::before {
+      content: none !important;
+    }
+
     .hds-button__label {
+      margin-bottom: 0;
       padding-right: 0;
     }
   }
