--- a/templates/views/views-view--unit-search.html.twig
+++ b/templates/views/views-view--unit-search.html.twig
@@ -56,7 +56,7 @@
 
   <div class="unit-search__results">
     <span class="unit-search__count-container">
-      <span class="unit-search__count">{{ total_rows }}</span>
+      <span class="unit-search__count">{{ total_rows ? total_rows : 0 }}</span>
       {% trans with {'context': 'Unit search count'}%}result{% plural total_rows %}results{% endtrans %}
     </span>
 
