--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -113,7 +113,8 @@
   }
 
   // Animate all added slots
-  [data-item-count] .helfi-calculator__dynamic-slot {
+  [data-item-count] .helfi-calculator__dynamic-slot,
+  .helfi-calculator__receipt {
     @media (prefers-reduced-motion: no-preference) {
       animation: append-animate 0.3s linear;
     }
@@ -123,6 +124,12 @@
     & > div {
       align-self: start;
       min-height: 0;
+    }
+  }
+
+  .helfi-calculator__receipt {
+    @media (prefers-reduced-motion: no-preference) {
+      animation-duration: 0.3s;
     }
   }
 
@@ -185,6 +192,109 @@
     .hds-button__label {
       margin-bottom: 0;
       padding-right: 0;
+    }
+  }
+
+  .helfi-calculator__receipt__wrapper {
+    &::before,
+    &::after {
+      --height-unitless: 16;
+      --scale: calc(var(--height-unitless) / 50);
+      background-color: $color-fog-light;
+      content: '';
+      display: block;
+      height: calc(var(--height-unitless) * 1px);
+      mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='67' height='50'><path d='M67 50v-7.64L33.5 8.5 0 42.36V50h67z'/></svg>");
+      mask-position: top left;
+      mask-repeat: round;
+      mask-size: calc(67px * var(--scale)) calc(50px * var(--scale));
+      width: 100%;
+    }
+
+    &::after {
+      transform: rotate(180deg);
+    }
+
+    p,
+    .helfi-calculator__receipt-subtotal {
+      max-width: $content-width-max;
+    }
+  }
+
+  .helfi-calculator__receipt__container {
+    background: $color-fog-light;
+    padding: $spacing-double;
+  }
+
+  .helfi-calculator__receipt-total {
+    border-left: 8px solid $color-gold;
+    margin-top: 40px;
+    padding-left: 40px;
+  }
+
+  .helfi-calculator__receipt-total__prefix {
+    @include font('lead');
+    display: block;
+  }
+
+  .helfi-calculator__receipt-total__value {
+    @include font('h1');
+    display: block;
+    margin-top: 24px;
+  }
+
+  .helfi-calculator__receipt-total__suffix {
+    @include font('h6');
+    display: block;
+  }
+
+  .helfi-calculator__receipt-total-explanation {
+    display: flex;
+    gap: 8px;
+    margin-left: 8px;
+    padding-top: 4px;
+
+    &::before {
+      @include pseudo-icon('info-circle');
+
+      --icon-size: 32px;
+      flex-shrink: 0;
+      margin-top: -4px;
+    }
+  }
+
+  .helfi-calculator__receipt-hr {
+    margin-top: 48px;
+  }
+
+  .helfi-calculator__receipt-subtotal {
+    margin-top: 40px;
+
+    h4 {
+      grid-area: title;
+    }
+
+    ul {
+      grid-area: details;
+      margin-block: 0;
+    }
+
+    li {
+      margin-top: 0;
+    }
+
+    .helfi-calculator__receipt-subtotal-sum {
+      @include font('h4');
+      grid-area: sum;
+    }
+
+    @include breakpoint($breakpoint-s) {
+      display: grid;
+      grid-template-areas:
+        'title sum'
+        'details details';
+      grid-template-columns: 1fr min-content;
+      grid-template-rows: auto 1fr;
     }
   }
 }
