UHF-X: Add missing quotes around html attribute values

--- a/templates/misc/nav-toggle-button.twig
+++ b/templates/misc/nav-toggle-button.twig
@@ -23,7 +23,7 @@
   </div>
 
   {# Slightly more accessible js enhanced menu button #}
-  <button class="nav-toggle__button {{ button_modified }} {{ js_target }}" aria-expanded="false" aria-controls={{ controls }}>
+  <button class="nav-toggle__button {{ button_modified }} {{ js_target }}" aria-expanded="false" aria-controls="{{ controls }}">
     <span class="nav-toggle__label {{ label_modified }} nav-toggle__label--open">{{ menu_open }}</span>
     <span class="nav-toggle__label {{ label_modified }} nav-toggle__label--close">{{ menu_close }}</span>
   </button>
