--- a/templates/navigation/menu--external-header-language-links.html.twig
+++ b/templates/navigation/menu--external-header-language-links.html.twig
@@ -38,7 +38,7 @@
 
     {% set item_lang = '' %}
     {% if item.attributes.lang %}
-      {% set item_lang = ' lang=' ~ item.attributes.lang ~ '' %}
+      {% set item_lang %} lang="{{ item.attributes.lang }}"{% endset %}
     {% endif %}
 
     {% set item_title %}
