UHF-X: Remove unused id attribute that had no value set

--- a/templates/component/accordion.twig
+++ b/templates/component/accordion.twig
@@ -14,7 +14,7 @@
 
 <div class="accordion__wrapper helfi-accordion-item" data-accordion-id="{{heading[0]['#context']['value']|clean_class}}">
   <span class="is-hidden" id="{{ toggle_button_labelledby_id }}">{{ 'Toggle element: '|t({}, {'context': 'The helper text for toggle accordion visibility button'}) }}{{ heading|default('Missing heading'|t) }}</span>
-  <{{ heading_level|default('h2') }} class="accordion-item__header helfi-accordion__header" id="{{ labelledby_id }}" data-accordion-id="{{heading[0]['#context']['value']|clean_class}}">
+  <{{ heading_level|default('h2') }} class="accordion-item__header helfi-accordion__header" data-accordion-id="{{heading[0]['#context']['value']|clean_class}}">
     <button class="accordion-item__button accordion-item__button--toggle helfi-accordion__header__button" aria-expanded="true" aria-controls="{{ controlled_content_id }}" aria-labelledby="{{ toggle_button_labelledby_id }}">
       {% if heading_icon %}
         <div class="accordion-item__icon">
