UHF-5047: Fixed coding standard issues and the translations.

--- a/templates/media/media--remote-video.html.twig
+++ b/templates/media/media--remote-video.html.twig
@@ -49,6 +49,7 @@
           'height': media_attributes.height,
           'width': media_attributes.width,
           'title': iframe_title,
+          'type': 'video',
         }
       }
     }
