UHF-6848: Split the app into 2 searches: enable searching by school address / postal code

--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -56,3 +56,7 @@
   --tab-active-border-color: var(--hdbt-color-black);
   --tab-color: var(--hdbt-color-black);
 }
+
+.react-search__form-description {
+  margin-bottom: $spacing;
+}
