--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -11,9 +11,9 @@
 }
 
 // If the event search search is just before footer it needs to function the same way as unit search.
-.layout-main-wrapper > *:last-child .component--react-search:last-child {
+.layout-main-wrapper > *:last-child .component--react-search:last-child .component__container {
   margin-bottom: -115px; // Enough to get the block under the footer.
-  padding-bottom: 55px; // Leave enough room between the last card and footer.
+  padding-bottom: 115px; // Leave enough room between the last card and footer.
 }
 
 .component--react-search .component__container {
